Fixed spacing for H2 and H3, fixed ordering on input fields on edit movie
The ordering of the input fields when editing a movie didn't match
the order shown in the table.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -40,12 +40,14 @@ h2 {
   text-align: center;
   width: 60%;
   margin: auto;
+  padding: 10px;
 }
 
 h3 {
   text-align: center;
   width: 60%;
   margin: auto;
+  padding: 10px;
 }
 
 footer {
